Fix: Ensure (金) font size and alignment are consistent

--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ body {
 }
 
 .date-block .large-date span {
+    font-size: inherit;
+    vertical-align: middle;
     margin-left: 0.5rem;
 }
 
